--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                         <option value="ensmedio">Ensino Médio</option>
                         <option value="graduacao">Graduação/ Bacharelado</option>
                         <option value="posgraduacao">Pós Graduação</option>
-                        <option value="mestrado">Pós Mestrado</option>
-                        <option value="Doutorado">Pós Doutorado</option>
+                        <option value="mestrado">Mestrado</option>
+                        <option value="Doutorado">Doutorado</option>
                     </select>
                 </div>
         </fieldset>
