--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <option value="posgraduacao">Pós Graduação</option>
                     <option value="mestrado">Mestrado</option>
                     <option value="Doutorado">Doutorado</option>
-                </select>
+                </select><br>
 
-                <P><input class="button" type="submit" value="Cadastrar"></P>
+                <input class="button" type="submit" value="Cadastrar"/>
         </fieldset>        
 
     </form>
