--- a/index.html
+++ b/index.html
@@ -110,5 +110,9 @@
         </fieldset>        
 
     </form>
+<footer>
+Curso FullStack <a href="https://b7web.com.br/">B7web</a> - Professor <a href="https://github.com/bonieky">Bonieky Lacerda</a> - Aluna: <a href="https://www.linkedin.com/in/claudiakruger/">Cláudia Krüger</a> - Exercício.
+</footer>
 </body>
+
 </html>
